--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -176,11 +176,13 @@
 
                     <ImageView
                         android:id="@+id/Login_Iv_Google"
-                        android:layout_width="40dp"
                         android:layout_marginEnd="-40dp"
-                        android:layout_height="40dp"
+                        android:foreground="?attr/selectableItemBackgroundBorderless"
+                        android:layout_width="wrap_content"
+                        android:background="@drawable/ic_google_plus"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
-                        android:src="@drawable/ic_google_plus" />
+                         />
                 </RelativeLayout>
 
             </LinearLayout>
