--- a/app/src/main/res/layout/activity_mymain.xml
+++ b/app/src/main/res/layout/activity_mymain.xml
@@ -11,6 +11,7 @@
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/nav_view"
+            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="0dp"
