--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="text_color">#222934</color>
     <color name="second_text_color">#989898</color>
     <color name="green">#07B140</color>
+    <color name="yellow">#FFEB3B</color>
 
 
     <color name="colorPrimary">#FFFFFF</color>
