--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -10,14 +10,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:backgroundTint="#F0F0F1"
+        android:background="#F0F0F1"
         android:orientation="vertical"
         tools:context=".View.activity.DetailProduct">
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/detail_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="45dp"
             android:background="@drawable/main_background"
             app:navigationIconTint="@color/white"
             app:titleTextColor="@color/white" />
@@ -27,14 +27,12 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginStart="12dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="6dp"
             android:layout_marginEnd="12dp"
-            android:layout_marginBottom="8dp"
             android:layout_weight="1"
-             android:background="@color/white"
+            android:background="@color/white"
             app:cardCornerRadius="15dp"
-            app:strokeColor="@color/text_color"
-            app:strokeWidth=".5dp">
+            >
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -60,11 +58,12 @@
                     android:textAlignment="center"
                     android:textColor="@color/second_text_color" />
 
-                <ImageView
+                <com.github.chrisbanes.photoview.PhotoView
                     android:id="@+id/detail_iv_product"
                     android:layout_width="match_parent"
+                    android:scaleType="fitCenter"
                     android:layout_height="0dp"
-                    android:layout_weight="10" />
+                    android:layout_weight="15" />
 
 
 
@@ -75,16 +74,17 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="6dp"
                     android:layout_marginEnd="8dp"
                     android:text="@string/loading"
+                    android:textSize="15sp"
                     android:textAlignment="center" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="6dp"
                     android:layout_marginEnd="8dp"
                     android:orientation="horizontal">
 
@@ -105,6 +105,7 @@
                         android:layout_marginStart="8dp"
                         android:layout_weight="1"
                         android:padding="6dp"
+                        android:textSize="12sp"
                         android:text="@string/price"
                         android:textStyle="bold" />
 
@@ -112,12 +113,12 @@
                         android:id="@+id/detail_price_value"
                         style="@style/viewParent.normalText"
                         android:layout_width="wrap_content"
-
+                        android:textSize="12sp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="start|center_vertical"
                         android:background="@drawable/background_price"
                         android:gravity="start"
-                        android:padding="6dp"
+                        android:padding="4dp"
                         android:text="@string/loading" />
 
                 </LinearLayout>
@@ -126,7 +127,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="6dp"
                     android:layout_marginEnd="8dp"
 
                     android:orientation="horizontal">
@@ -147,6 +148,7 @@
                         android:layout_marginStart="8dp"
                         android:layout_weight="1"
                         android:padding="6dp"
+                        android:textSize="12sp"
                         android:text="@string/product_quantity"
                         android:textStyle="bold" />
 
@@ -154,12 +156,13 @@
                     <TextView
                         android:id="@+id/detail_quantity_value"
                         style="@style/viewParent.normalText"
+                        android:textSize="12sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_marginStart="8dp"
                         android:background="@drawable/background_price"
-                        android:padding="6dp"
+                        android:padding="4dp"
                         android:text="@string/loading" />
 
 
@@ -169,7 +172,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="6dp"
                     android:layout_marginEnd="8dp"
 
                     android:orientation="horizontal">
@@ -184,6 +187,7 @@
                     <TextView
                         android:id="@+id/detail_desc"
                         android:padding="6dp"
+                        android:textSize="12sp"
                         style="@style/viewParent.normalText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -195,27 +199,19 @@
 
 
                 <TextView
+                    android:textSize="12sp"
                     android:id="@+id/detail_desc_value"
                     style="@style/viewParent.normalText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="6dp"
+                    android:layout_marginBottom="6dp"
                     android:layout_marginEnd="8dp"
                     android:background="@drawable/background_price"
-                    android:padding="6dp"
+                    android:padding="4dp"
                     android:text="@string/loading" />
 
-
-                <View
-                    android:id="@+id/view2"
-                    android:layout_width="0dp"
-                    android:layout_height="0.3dp"
-                    android:layout_marginTop="8dp"
-                    android:background="@color/text_color"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/detail_title" />
 
 
             </LinearLayout>
@@ -226,7 +222,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="6dp"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/detail_cardview"
@@ -261,7 +257,7 @@
                 android:layout_marginEnd="12dp"
                 android:layout_marginStart="12dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="6dp"
                 android:layout_weight="1"
                 android:background="@drawable/button_background"
                 android:gravity="start"
