--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -86,7 +86,7 @@
 
                     android:layout_marginTop="12dp"
                     android:text="@string/forgot_password"
-                    android:textSize="12sp" />
+                    android:textSize="11sp" />
 
 
                 <LinearLayout
@@ -109,9 +109,29 @@
                         android:text="@string/register"
                         android:id="@+id/login_go_to_register_tv" />
 
+
+
                 </LinearLayout>
-
-
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="6dp"
+                app:startIconDrawable="@drawable/ic_languages"
+                app:boxStrokeColor="@color/orange"
+                android:id="@+id/chose_languages_dad"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                >
+                <AutoCompleteTextView
+                    android:id="@+id/login_chose_lan"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/iranyekanweblight"
+                    android:textSize="12sp"
+                    android:layout_weight="1"
+                    android:inputType="none"
+                    android:text="@string/English"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
 
 
 
