--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,28 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
-    xmlns:app="http://schemas.android.com/tools"
-    app:ignore="NamespaceTypo">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <fragment
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+    <data>
+
+    </data>
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".View.activity.MapsActivity" />
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:id="@+id/Map_Find_location"
-        android:src="@drawable/ic_location"
-        android:backgroundTint="@color/orange"
-        app:tint="@color/white"
+        android:layout_height="match_parent">
 
-        />
-</FrameLayout>
+
+
+        <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".View.activity.MapsActivity" />
+
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:theme="@style/ThemeOverlay.MaterialComponents"
+            android:layout_gravity="bottom|end"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="100dp"
+            android:id="@+id/Map_Find_location"
+            android:textSize="11sp"
+            app:icon="@drawable/ic_baseline_check_24"
+            android:text="@string/The_displaye_location_is_correct"
+            android:backgroundTint="@color/orange"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            app:iconTint="@color/white"
+
+            app:tint="@color/white" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:textColor="#616161"
+            android:textSize="13sp"
+            android:layout_gravity="end"
+            android:layout_marginEnd="55dp"
+            android:layout_marginTop="20dp"
+            android:text="@string/findlocation"
+            android:layout_height="wrap_content"
+          />
+    </FrameLayout>
+</layout>
