--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -39,6 +39,7 @@
                 android:src="@drawable/ic_baseline_arrow_downward_24"
                 android:layout_gravity="end"
                 android:elevation="20dp"
+                android:background="@color/white"
                 android:layout_marginTop="10dp"
                 android:foreground="?attr/selectableItemBackgroundBorderless"
                 android:layout_marginEnd="10dp"
