--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -36,6 +36,17 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:src="@drawable/ic_baseline_chat_24"
+                android:layout_gravity="end"
+                android:elevation="10dp"
+                android:id="@+id/detail_chat"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/shape_shimmer"
+                android:layout_marginEnd="40dp"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:src="@drawable/ic_baseline_arrow_downward_24"
                 android:layout_gravity="end"
                 android:elevation="20dp"
