--- a/app/src/main/res/layout/all_chat_item.xml
+++ b/app/src/main/res/layout/all_chat_item.xml
@@ -16,6 +16,7 @@
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/allchat_item_user_prof"
             android:layout_width="50dp"
+            setImage="@{user.image}"
             android:layout_height="50dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
@@ -29,7 +30,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:text="user"
+            android:text="@{user.firstName}"
+
             android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="@+id/allchat_item_user_prof"
             app:layout_constraintStart_toEndOf="@+id/allchat_item_user_prof"
