--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -26,7 +26,7 @@
 
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/circleImageView2"
+                android:id="@+id/chat_user_prof_image"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="2dp"
@@ -41,13 +41,14 @@
                 style="@style/viewParent.normalText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:id="@+id/chat_username"
                 android:layout_marginEnd="4dp"
                 android:elevation="10dp"
                 android:text="username"
                 android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="@+id/circleImageView2"
-                app:layout_constraintEnd_toStartOf="@+id/circleImageView2"
-                app:layout_constraintTop_toTopOf="@+id/circleImageView2" />
+                app:layout_constraintBottom_toBottomOf="@+id/chat_user_prof_image"
+                app:layout_constraintEnd_toStartOf="@+id/chat_user_prof_image"
+                app:layout_constraintTop_toTopOf="@+id/chat_user_prof_image" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
