--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -17,10 +17,33 @@
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/detail_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="40dp"
             android:background="@drawable/main_background"
             app:navigationIconTint="@color/white"
-            app:titleTextColor="@color/white" />
+            app:titleTextColor="@color/white">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/chat_ic"
+                android:layout_gravity="end"
+                android:foreground="?attr/selectableItemBackgroundBorderless"
+                android:elevation="10dp"
+                android:id="@+id/detail_chat"
+                android:layout_marginEnd="10dp"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_baseline_arrow_downward_24"
+                android:layout_gravity="end"
+                android:elevation="20dp"
+                app:tint="@color/white"
+
+
+                android:foreground="?attr/selectableItemBackgroundBorderless"
+                android:layout_marginEnd="10dp"
+                android:id="@+id/detail_Product_download"/>
+
+        </com.google.android.material.appbar.MaterialToolbar>
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/detail_cardview"
@@ -33,28 +56,8 @@
             android:background="@color/white"
             app:cardCornerRadius="15dp"
             >
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_baseline_chat_24"
-                android:layout_gravity="end"
-                android:elevation="10dp"
-                android:id="@+id/detail_chat"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/shape_shimmer"
-                android:layout_marginEnd="40dp"/>
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_baseline_arrow_downward_24"
-                android:layout_gravity="end"
-                android:elevation="20dp"
-                android:background="@color/white"
-                android:layout_marginTop="10dp"
-                android:foreground="?attr/selectableItemBackgroundBorderless"
-                android:layout_marginEnd="10dp"
-                android:id="@+id/detail_Product_download"/>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
