--- a/app/src/main/res/drawable/ic_email.xml
+++ b/app/src/main/res/drawable/ic_email.xml
@@ -1,10 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
+    android:width="20dp"
+    android:height="15dp"
     android:viewportWidth="122.88"
-    android:viewportHeight="122.88">
+    android:viewportHeight="88.86">
   <path
       android:fillColor="#FF000000"
-      android:pathData="M25.2,0L97.68,0a25.27,25.27 0,0 1,25.2 25.2L122.88,97.68a25.27,25.27 0,0 1,-25.2 25.2L25.2,122.88A25.27,25.27 0,0 1,0 97.68L0,25.2A25.27,25.27 0,0 1,25.2 0ZM29.3,37.59L62,64.26 93.33,37.59ZM27.19,82.48l23.3,-23.37 -23.3,-19L27.19,82.48ZM53.06,61.21 L29,85.29L93.65,85.29l-23,-24.08 -7.57,6.45h0a1.66,1.66 0,0 1,-2.12 0l-7.94,-6.48ZM73.2,59.07 L95.69,82.66L95.69,39.9L73.2,59.07Z"
-      android:fillType="evenOdd"/>
+      android:pathData="M7.05,0L115.83,0a7.07,7.07 0,0 1,7 7.05L122.83,81.81a7,7 0,0 1,-1.22 4,2.78 2.78,0 0,1 -0.66,1 2.62,2.62 0,0 1,-0.66 0.46,7 7,0 0,1 -4.51,1.65L7.05,88.92a7.07,7.07 0,0 1,-7 -7L0.05,7.05A7.07,7.07 0,0 1,7.05 0ZM6.75,78.84L43.53,40.62 6.75,9.54v69.3ZM49.07,45.39 L9.77,83.45h103L75.22,45.39l-11,9.21h0a2.7,2.7 0,0 1,-3.45 0L49.07,45.39ZM80.67,40.55 L116.13,79.15L116.13,9.2L80.67,40.55ZM10.21,5.41 L62.39,47.7 112.27,5.41Z"/>
 </vector>
