--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,10 +53,10 @@
                     android:id="@+id/textInputEmail"
                     style="@style/parent"
                     android:layout_marginTop="@dimen/loginViewsMargin">
-
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/Login_Edt_Email"
                         style="@style/modifiedEditText"
+                        android:drawablePadding="20dp"
                         android:drawableEnd="@drawable/ic_email"
                         android:inputType="textEmailAddress"
                         android:hint="@string/login_email_hint" />
@@ -67,13 +67,15 @@
                     android:id="@+id/textInputPassword"
                     style="@style/parent"
                     app:passwordToggleEnabled="true"
+                    app:passwordToggleDrawable="@drawable/password_toggle"
+
                     app:passwordToggleTint="@color/second_text_color"
                     android:layout_marginTop="@dimen/loginViewsMargin">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/Login_Edt_PassWord"
 
-                        style="@style/modifiedEditText"
+                         style="@style/modifiedEditText"
                          android:hint="@string/login_password_hint"
 
                         android:inputType="textPassword" />
@@ -83,7 +85,6 @@
                     android:id="@+id/Login_Edt_ForgotPassword"
                     style="@style/viewParent.normalText"
                     android:layout_gravity="start"
-
                     android:layout_marginTop="12dp"
                     android:text="@string/forgot_password"
                     android:textSize="11sp" />
@@ -116,6 +117,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="6dp"
+                android:backgroundTint="@color/white"
+
                 app:startIconDrawable="@drawable/ic_languages"
                 app:boxStrokeColor="@color/orange"
                 android:id="@+id/chose_languages_dad"
@@ -124,6 +127,7 @@
                 <AutoCompleteTextView
                     android:id="@+id/login_chose_lan"
                     android:layout_width="match_parent"
+                    android:backgroundTint="@color/white"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/iranyekanweblight"
                     android:textSize="12sp"
