--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -74,6 +74,7 @@
                             style="@style/parent"
                             app:counterEnabled="true"
                             app:counterMaxLength="15"
+                            android:focusableInTouchMode="true"
                             app:boxBackgroundColor="@color/white"
                             android:layout_marginTop="8dp">
 
@@ -82,7 +83,6 @@
                                 style="@style/modifiedEditText"
                                 android:maxLength="15"
                                 android:textSize="11sp"
-
                                 android:drawableEnd="@drawable/ic_volunteer"
                                 android:hint="@string/name"
                                 android:textAlignment="viewStart"
@@ -132,6 +132,7 @@
                             android:id="@+id/textInputPassword"
                             style="@style/parent"
                             app:passwordToggleEnabled="true"
+                            app:passwordToggleDrawable="@drawable/password_toggle"
                             app:passwordToggleTint="@color/second_text_color"
                             android:layout_marginTop="@dimen/loginViewsMargin">
 
@@ -149,6 +150,8 @@
                             android:id="@+id/textInputConfirmPassword"
                             style="@style/parent"
                             app:passwordToggleEnabled="true"
+                            app:passwordToggleDrawable="@drawable/password_toggle"
+
                             app:passwordToggleTint="@color/second_text_color"
                             android:layout_marginTop="@dimen/loginViewsMargin">
 
@@ -167,7 +170,7 @@
                             style="@style/checkbox"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center"
+                            android:layout_gravity="start"
                             android:layout_marginTop="1dp"
                             android:textSize="11sp"
                             android:checked="false"
